--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/LightTheme">
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTop">
@@ -26,7 +26,6 @@
                 android:label="@string/action_settings"
                 android:parentActivityName=".MainActivity"/>
 
-        <service android:name=".NotificationService"/>
     </application>
 
 </manifest>
