--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.stonedroid.mpgvertretungsplan"
         minSdkVersion 17
         targetSdkVersion 28
-        versionCode 15
-        versionName "3.0.3"
+        versionCode 16
+        versionName "3.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,7 +32,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.guava:guava:25.1-android'
-    implementation 'android.arch.work:work-runtime:1.0.0-alpha08'
+    implementation('android.arch.work:work-runtime:1.0.0-alpha12') {
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
