--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".SettingsActivity"
+                android:name=".settings.SettingsActivity"
                 android:label="@string/action_settings"
                 android:parentActivityName=".MainActivity"/>
 
