--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.2'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
     defaultConfig {
         applicationId "com.stonedroid.mpgvertretungsplan"
         minSdkVersion 17
-        targetSdkVersion 30
-        versionCode 23
-        versionName "4.0.1"
+        targetSdkVersion 31
+        versionCode 24
+        versionName "4.0.2"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
@@ -31,12 +31,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.google.guava:guava:25.1-android'
-    implementation('androidx.work:work-runtime:2.4.0') {
-        exclude group: 'com.google.guava', module: 'listenablefuture'
-    }
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.guava:guava:28.2-android'
+    implementation files('libs/vertretungsplan-1.2.3.jar')
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
