--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
             android:usesCleartextTraffic="true">
         <activity
                 android:name=".MainActivity"
-                android:launchMode="singleTop">
+                android:launchMode="singleTop"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
